
INCLUDES = -I$(top_srcdir)/include

noinst_LIBRARIES = libfs.a

libfs_a_SOURCES = fssubs.c unicode_to_utf8.c devices.c utilsubs.c \
 super.c inode.c diskmap.c message.c uniupr.c jfs_endian.c \
 open_by_label.c log_dump.c logform.c logredo.c log_work.c log_read.c \
 log_map.c fsckmsgdef.c \
 debug.h devices.h diskmap.h fsck_base.h fsckcbbl.h fscklog.h \
 fsckwsp.h inode.h libjufs.h message.h super.h unicode_to_utf8.h \
 utilsubs.h jfs_endian.h logform.h logredo.h fsck_message.h
